k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wpex
  labels:
    app: wpex-orchestrator
